# Cpp_ColumnarReader

./: CMakeLists.txt  README.md
parquet/: a.out  parquet_dump_schema.cc  parquet_reader.cc  parquet_scan.cc
src/: main.cpp
